# htrack

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/colorpick/: CMakeLists.txt  colorpick.cpp
apps/helloworld/: CMakeLists.txt  main.cpp
apps/helloworld_atb/: CMakeLists.txt  main.cpp  main_new.cpp
apps/helloworld_cublas/: CMakeLists.txt  gnuplot_i.h  main_performance.cpp  main_simple.cpp
apps/helloworld_cudagl/: CMakeLists.txt  main.cpp
apps/helloworld_librealsense/: CMakeLists.txt  main.cpp
apps/helloworld_opencv/: CMakeLists.txt  main.cpp
apps/helloworld_openmp/: CMakeLists.txt  main.cpp
apps/helloworld_openni/: CMakeLists.txt  main.cpp
apps/helloworld_qglviewer/: CMakeLists.txt  main.cpp
apps/helloworld_qtopengl/: CMakeLists.txt  main.cpp
apps/helloworld_realsense/: CMakeLists.txt  main.cpp
apps/helloworld_thrust/: CMakeLists.txt  main.cu
apps/htrack_atb/: AntTweakBarEventFilter.h  CMakeLists.txt  main.cpp
apps/htrack_qt/: CMakeLists.txt  Main_window.cpp  Main_window.h  OpenGL_viewer.cpp  OpenGL_viewer.h  main.cpp
apps/synthgen/: synthgen.cpp
cmake/: CompileSynthgen.cmake  ConfigureAntTweakBar.cmake  ConfigureCUDA.cmake  ConfigureCompiler.cmake  ConfigureCudaOctree.cmake  ConfigureEigen.cmake  ConfigureGLEW.cmake  ConfigureGLFW.cmake  ConfigureLibRealSense.cmake  ConfigureOpenCV.cmake  ConfigureOpenGL.cmake  ConfigureOpenGP.cmake  ConfigureOpenMP.cmake  ConfigureOpenNI.cmake  ConfigureQGLViewer.cmake  ConfigureQt.cmake  ConfigureRealSense.cmake  ConfigureSensor.cmake  ConfigureSoftKinetic.cmake  FindAntTweakBar.cmake  FindEigen3.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindOpenCV2.cmake  FindOpenGP.cmake  FindOpenNI2.cmake  FindQGLViewer.cmake  FindSoftKinetic.cmake
cudax/: CMakeLists.txt  CublasHelper.h  CudaHelper.h  CudaTimer.h  KinectCamera.h  Kinematic.h  MeshGrid.h  OpenCVOutputBuffer.h  PixelIndexer.h  Timer.h  cuda_glm.h  externs.h  helper_cuda.h  kernel.cu  kernel.h  kernel_debug.h  kernel_init.h  kernel_upload.h  outer_product.cu
cudax/functors/: ClosestPoint.h  ComputeJacobianRow.h  ComputeJacobianRowDepth.h  ComputeJacobianRowExtraClosedForm.h  ComputeJacobianRowPush.h  ComputeJacobianRowSilho.h  CopyOver.h  ImageGradient.h  ImageGradientDepth.h  ImageHighlighter.h  IsMatchingDepth.h  IsSilhouette.h  IsSilhouetteBoundary.h  IsTopLeft3x3Block.h  SkeletonJacobian.h
matlab/ik_alignment/: FKObject.m  PiecewiseRigidAlignment2D.m
matlab/is_tracking_lost/: andrew_ng_logistic_regression.m  data.txt  main.m  readme.txt
openni/include/: NiTE.h  NiteVersion.h  OniEnums.h  OniPlatform.h  OniProperties.h  OpenNI.h
openni/lib/OpenNI2/Drivers/: libFreenectDriver.so.vga
tracker/: CMakeLists.txt  ForwardDeclarations.h  Tracker.h  TwSettings.cpp  TwSettings.h  Types.h  Worker.cpp  Worker.h
tracker/Calibration/: Calibration.cpp  Calibration.h  Skeleton_IO.cpp  Skeleton_IO.h  default.calib
tracker/Data/: Camera.cpp  Camera.h  DataFrame.h  DataStream.cpp  DataStream.h  SolutionStream.h  TextureColor8UC3.h  TextureDepth16UC1.h
tracker/DataStructure/: CustomJointInfo.h  SkeletonSerializer.cpp  SkeletonSerializer.h
tracker/Detection/: DetectionStream.h  FindFingers.cpp  FindFingers.h  QianDetection.cpp  QianDetection.h  TrivialDetector.cpp  TrivialDetector.h  matlab_helpers.h
tracker/Energy/: Collision.cpp  Collision.h  Damping.cpp  Damping.h  Energy.cpp  Energy.h  Fitting.cpp  Fitting.h  JointLimits.cpp  JointLimits.h  PoseSpace.cpp  PoseSpace.h  Temporal.cpp  Temporal.h  Wristband.cpp  Wristband.h
tracker/Energy/Fitting/: DistanceTransform.h  Settings.h  TrackingMonitor.h
tracker/Energy/PoseSpace_PCA/: Limits  P  Sigma
tracker/Energy/PoseSpace_PCA/fingers/: Limits  P  Sigma  mu
tracker/Energy/PoseSpace_PCA/thumb/: Limits  P  Sigma
tracker/HandFinder/: HandFinder.cpp  HandFinder.h  connectedComponents.cpp  connectedComponents.h  wristband.txt
tracker/Legacy/: LegacyTracker.cpp  LegacyTracker.h  fingerfist.mat
tracker/Legacy/algorithm/: Detector.h  ICP.cpp  ICP.h
tracker/Legacy/geometry/: Cylinders.cpp  Cylinders.h  Effector.cpp  Effector.h  Joint.cpp  Joint.h  Mapping.cpp  Mapping.h  Skeleton.cpp  Skeleton.h
tracker/Legacy/math/: Inverse_kinematics.cpp  Inverse_kinematics.h  MathUtils.cpp  MathUtils.h  PCA.cpp  PCA.h
tracker/Legacy/util/: PostureFile.h  Util.cpp  Util.h  openmp_helpers.h
tracker/OffscreenRender/: CustomFrameBuffer.h  OffscreenRenderer.cpp  OffscreenRenderer.h
tracker/OpenGL/: ObjectRenderer.cpp  ObjectRenderer.h  shaders.qrc
tracker/OpenGL/CylindersRenderer/: Cylinders_FB_fshader.glsl  Cylinders_FB_vshader.glsl  Cylinders_fshader.glsl  Cylinders_renderer.cpp  Cylinders_renderer.h  Cylinders_vshader.glsl  icopill.h
tracker/OpenGL/DebugRenderer/: CloudRenderer.cpp  CloudRenderer.h  CloudRenderer_fshader.glsl  CloudRenderer_vshader.glsl  DebugRenderer.cpp  DebugRenderer.h  Segment_renderer.cpp  Segment_renderer.h
tracker/OpenGL/KinectDataRenderer/: KinectDataRenderer.cpp  KinectDataRenderer.h  KinectDataRenderer_fshader.glsl  KinectDataRenderer_vshader.glsl
tracker/OpenGL/QuadRenderer/: QuadRenderer.cpp  QuadRenderer.h  QuadRenderer_color_fshader.glsl  QuadRenderer_depth_fshader.glsl  QuadRenderer_vshader.glsl
tracker/Sensor/: Sensor.h  Sensor_depthsensegrabber.cpp  Sensor_librealsense.cpp  Sensor_openni.cpp  Sensor_realsense.cpp  Sensor_softkin.cpp
util/: CMakeLists.txt  MLogger.h  MLogger_Eigen.h  OpenGL32Format.h  Sleeper.h  assertf.h  check_error_gl.h  eigen_opengl_helpers.h  gl_wrapper.h  mylogger.h  opencv_wrapper.h  opengl_helper.h  qDebug_helpers.h  qfile_helper.h  qt2eigen.h  rand.h  singleton.h  tictoc.h
